# tooling-asf-example

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/actions/atr-upload/: action.yml
.github/workflows/: announce-release-on-atr.yaml  build-and-rsync-to-atr.yaml  build_dists.yaml  distribute-test.yml  post-oidc-jwt-to-atr.yaml  record-distribution-on-atr.yaml  release-on-tag.yaml  resolve-vote-on-atr.yaml
src/asf/example/: __init__.py
tests/: test_empty.py
